[package]
name = "fftspectrum_rs"
version = "1.0.10"
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
const-str = "=0.7.1"
ndarray = "=0.17.1"
rustfft = "=6.4.1"
vapours = { version = "=0.2.3", default-features = false, features = ["vsscript"] }
vapoursynth4-rs = { version = "=0.4.0", default-features = false, features = ["vsscript"] }

[patch.crates-io]
vapoursynth4-rs = { git = "https://github.com/dtlnor/vapoursynth4-rs", branch = "master" }
vapours = { git = "https://github.com/dtlnor/vapours", branch = "main" }

[profile.release]
codegen-units = 1
lto = true

[profile.release-debug]
inherits = "release"
debug = true

[lints.rust]
deprecated_safe = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [] }
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

as_underscore = "warn"
default_union_representation = "warn"
inline_asm_x86_att_syntax = "warn"
undocumented_unsafe_blocks = "warn"

cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_arguments = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
